[package]
name = "axelar-solana-governance"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
name = "axelar_solana_governance"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-sbf = []
devnet-amplifier = [
    "axelar-solana-gateway-test-fixtures/devnet-amplifier",
    "solana-axelar-gateway-legacy/devnet-amplifier",
    "solana-axelar-memo-legacy/devnet-amplifier",
    "program-utils/devnet-amplifier"
]
stagenet = [
    "axelar-solana-gateway-test-fixtures/stagenet",
    "solana-axelar-gateway-legacy/stagenet",
    "solana-axelar-memo-legacy/stagenet",
    "program-utils/stagenet"
]
testnet = [
    "axelar-solana-gateway-test-fixtures/testnet",
    "solana-axelar-gateway-legacy/testnet",
    "solana-axelar-memo-legacy/testnet",
    "program-utils/testnet"
]
mainnet = [
    "axelar-solana-gateway-test-fixtures/mainnet",
    "solana-axelar-gateway-legacy/mainnet",
    "solana-axelar-memo-legacy/mainnet",
    "program-utils/mainnet"
]
default = ["devnet-amplifier"]

[dependencies]
anchor-discriminators.workspace = true
anchor-discriminators-macros.workspace = true
event-cpi-macros.workspace = true
event-cpi.workspace = true
solana-program.workspace = true
solana-sdk-ids.workspace = true
program-utils = { workspace = true, default-features = false }
governance-gmp.workspace = true
borsh.workspace = true
axelar-solana-encoding.workspace = true
alloy-sol-types.workspace = true
solana-axelar-gateway-legacy = { workspace = true, features = ["no-entrypoint"] }
role-management.workspace = true

[dev-dependencies]
anyhow.workspace = true
event-cpi-test-utils.workspace = true
solana-logger.workspace = true
solana-program-test.workspace = true
solana-sdk.workspace = true
ethers.workspace = true
alloy-primitives.workspace = true
axelar-solana-gateway-test-fixtures.workspace = true
solana-axelar-memo-legacy = { workspace = true, features = ["no-entrypoint"] }
dummy-axelar-solana-gateway = { workspace = true, features = ["no-entrypoint"] }
uuid = { version = "1.11.0", features = ["v4"] }
serde.workspace = true
