[package]
name = "axelar-solana-its-v2"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
solana-program.workspace = true
alloy-primitives.workspace = true
interchain-token-transfer-gmp = { workspace = true }
axelar-solana-gateway-v2 = { workspace = true, features = ["cpi"] }
mpl-token-metadata.workspace = true
spl-token-metadata-interface.workspace = true
anchor-lang = { workspace = true, features = ["allow-missing-optionals", "init-if-needed"] }
anchor-spl.workspace = true
axelar-solana-gas-service-v2 = { workspace = true, features = ["no-entrypoint", "cpi"] }
axelar-solana-operators = { workspace = true, features = ["no-entrypoint"] }
program-utils.workspace = true
bytemuck.workspace = true
bitflags.workspace = true

[dev-dependencies]
axelar-solana-gateway-v2-test-fixtures.workspace = true
axelar-solana-its-v2-test-fixtures.workspace = true
axelar-solana-gas-service-v2 = { workspace = true, features = ["no-entrypoint", "cpi"] }
axelar-solana-gateway-v2 = { workspace = true, features = ["cpi"] }
mollusk-svm-programs-token = "0.4.1"
solana-program.workspace = true
hex.workspace = true
axelar-solana-gateway-test-fixtures.workspace = true
axelar-solana-gas-service.workspace = true
bincode.workspace = true
solana-sdk-ids.workspace = true
solana-sdk.workspace = true
mollusk-svm.workspace = true
mollusk-test-utils.workspace = true

[lints]
workspace = true

[lib]
name = "axelar_solana_its_v2"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

cpi = ["no-entrypoint"]
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

devnet-amplifier = [
	"axelar-solana-gas-service-v2/devnet-amplifier",
	"axelar-solana-gateway-test-fixtures/devnet-amplifier",
	"axelar-solana-operators/devnet-amplifier",
	"program-utils/devnet-amplifier",
]
stagenet = [
	"axelar-solana-gas-service-v2/stagenet",
	"axelar-solana-gateway-test-fixtures/stagenet",
	"axelar-solana-operators/stagenet",
	"program-utils/stagenet",
]
testnet = [
	"axelar-solana-gas-service-v2/testnet",
	"axelar-solana-gateway-test-fixtures/testnet",
	"axelar-solana-operators/testnet",
	"program-utils/testnet",
]
mainnet = [
	"axelar-solana-gas-service-v2/mainnet",
	"axelar-solana-gateway-test-fixtures/mainnet",
	"axelar-solana-operators/mainnet",
	"program-utils/mainnet",
]
default = ["devnet-amplifier"]
