[package]
name = "axelar-solana-multicall"
version = "0.1.0"
edition = "2021"

[lib]
name = "axelar_solana_multicall"
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[features]
no-entrypoint = []
test-sbf = []
devnet-amplifier = [
    "axelar-solana-gateway-test-fixtures/devnet-amplifier",
    "axelar-solana-gateway/devnet-amplifier",
    "solana-axelar-memo-legacy/devnet-amplifier"
]
stagenet = [
    "axelar-solana-gateway-test-fixtures/stagenet",
    "axelar-solana-gateway/stagenet",
    "solana-axelar-memo-legacy/stagenet",
]
testnet = [
    "axelar-solana-gateway-test-fixtures/testnet",
    "axelar-solana-gateway/testnet",
    "solana-axelar-memo-legacy/testnet",
]
mainnet = [
    "axelar-solana-gateway-test-fixtures/mainnet",
    "axelar-solana-gateway/mainnet",
    "solana-axelar-memo-legacy/mainnet",
]
default = ["devnet-amplifier"]

[dependencies]
anchor-discriminators-macros.workspace = true
alloy-sol-types.workspace = true
borsh.workspace = true
axelar-solana-gateway = { workspace = true, features = ["no-entrypoint"] }
solana-program.workspace = true
thiserror.workspace = true

[dev-dependencies]
solana-axelar-memo-legacy = { workspace = true, features = ["no-entrypoint"] }
axelar-solana-gateway-test-fixtures.workspace = true
ethers-core.workspace = true
evm-contracts-test-suite.workspace = true
itertools.workspace = true
solana-program-test.workspace = true
solana-sdk.workspace = true
