[package]
name = "memo"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anchor-lang.workspace = true
axelar-solana-gateway-v2 = { workspace = true, features = ["cpi"] }
axelar-solana-gateway = { workspace = true, features = ["no-entrypoint"], default-features = false }
borsh.workspace = true

[dev-dependencies]
axelar-solana-gateway-v2-test-fixtures = { path = "../../crates/axelar-solana-gateway-v2-test-fixtures" }
mollusk-svm.workspace = true
solana-sdk.workspace = true
bincode.workspace = true
axelar-solana-encoding.workspace = true
hex.workspace = true

[lints]
workspace = true

[lib]
name = "memo"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

cpi = ["no-entrypoint"]
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

anchor-debug = []
custom-heap = []
custom-panic = []

# Network features - these pass through to the gateway dependency
devnet-amplifier = [
	"axelar-solana-gateway/devnet-amplifier",
	"axelar-solana-gateway-v2/devnet-amplifier",
]
stagenet = [
	"axelar-solana-gateway/stagenet",
	"axelar-solana-gateway-v2/stagenet",

]
testnet = [
	"axelar-solana-gateway/testnet",
	"axelar-solana-gateway-v2/testnet",
]
mainnet = [
	"axelar-solana-gateway/mainnet",
	"axelar-solana-gateway-v2/mainnet",
]
default = ["devnet-amplifier"]
