[package]
name = "solana-axelar-gas-service-legacy"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anchor-discriminators.workspace = true
anchor-discriminators-macros.workspace = true
solana-program.workspace = true
solana-sdk-ids.workspace = true
bytemuck.workspace = true
borsh.workspace = true
program-utils.workspace = true
event-cpi.workspace = true
event-cpi-macros.workspace = true

[dev-dependencies]
event-cpi-test-utils.workspace = true
solana-sdk.workspace = true
solana-program-test.workspace = true
solana-axelar-gateway-legacy-test-fixtures.workspace = true
rstest.workspace = true


[lints]
workspace = true

[lib]
name = "solana_axelar_gas_service_legacy"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
devnet-amplifier = [
    "solana-axelar-gateway-legacy-test-fixtures/devnet-amplifier",
    "program-utils/devnet-amplifier",
]
stagenet = [
    "solana-axelar-gateway-legacy-test-fixtures/stagenet",
    "program-utils/stagenet",
]
testnet = [
    "solana-axelar-gateway-legacy-test-fixtures/testnet",
    "program-utils/testnet",
]
mainnet = [
    "solana-axelar-gateway-legacy-test-fixtures/mainnet",
    "program-utils/mainnet",
]
default = ["devnet-amplifier"]
